Fix modal display issue in Chrome
We observe an issue in Chrome that affects the visibility of the
forgot-password-modal element. We suspect it's due to a SASS-compiled
CSS line that is too long (84k+ characters). We fix the issue by
splitting the long line in two shorter lines.

This closes issue #1529.

--- a/lms/static/sass/multicourse/_account.scss
+++ b/lms/static/sass/multicourse/_account.scss
@@ -161,11 +161,13 @@
 .login, .register, .passwordreset, #forgot-password-modal #password-reset {
 
   // reset - horrible, but necessary
-  p, ol, ul, h1, h2, h3, h4, h5, h6, label, input, textarea {
+  // At FUN we split the reset clause in two parts in order to avoid a truncated directive line issue in Chrome.
+  p, ol, ul, label, input, textarea {
     @extend %body-text;
   }
 
   h1, h2, h3, h4, h5, h6 {
+    @extend %body-text;
     letter-spacing: 0;
   }
 
